<resources>
    <string name="app_name">WanderFul</string>
    <string name="hint_group_name">Enter group name</string>
    <string name="hint_travel_place">Enter travel location</string>
    <string name="hint_travel_date">Enter date of travel</string>
    <string name="add_group_image">Add group image</string>
    <string name="button_create_group">Create Group</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_group_chat">Enter message</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="create_widget">Create Widget</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">You have been signed out.</string>
    <string name="signed_in">Successfully signed in. Welcome back!</string>
    <string name="error_signing_in">We could not sign you in. Please try again later.</string>
    <string name="error_loading_group">Error loading group</string>
    <string name="enter_message">Enter message</string>
    <string name="try_again">Please try again</string>
    <string name="error_adding_message">Message could not be added</string>
    <string name="enter_group_name">Please enter group name</string>
    <string name="error_creating_group">There was a problem creating group, please try again.</string>
    <string name="new_group_created">New group has been created</string>
    <string name="error_adding_group">Group could not be added</string>
    <string name="cancelled">Cancelled</string>
    <string name="invite_users">Invite Users</string>
    <string name="invitation_title">WanderFul Group Invitation</string>
    <string name="invitation_message">You have been invited to join a group in WanderFul app.</string>
    <string name="group_icon">Group Icon</string>
    <string name="add_more_groups">Add more groups</string>
    <string name="group_image_icon">Group image icon</string>
    <string name="invitation_failed">Failed to send message</string>
</resources>
